// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calendar componentWillMount() !isSingleCalendar 1`] = `
<div>
  <div>
    <CalendarDateTimePicker
      borderLeft={true}
      borderRight={true}
      highlight={2009-04-03T18:00:00.000Z}
      icon={true}
      isCalendarShown={true}
      onChange={[Function]}
      onChangeCalendarVisibility={[Function]}
      onSetDate={[Function]}
      time={false}
      value={2009-04-30T18:00:00.000Z}
      visibleDate={2009-04-03T18:00:00.000Z}
    />
  </div>
</div>
`;

exports[`Calendar componentWillMount() !isSingleCalendar 2`] = `
<div>
  <div>
    <CalendarDateTimePicker
      borderLeft={true}
      borderRight={false}
      highlight={
        Array [
          2009-04-03T18:00:00.000Z,
          2009-04-05T18:00:00.000Z,
        ]
      }
      icon={false}
      isCalendarShown={true}
      onChange={[Function]}
      onChangeCalendarVisibility={[Function]}
      onSetDate={[Function]}
      rightArrow={false}
      time={false}
      value={2009-04-30T18:00:00.000Z}
      visibleDate={2017-10-15T18:03:57.113Z}
    />
    <div>
      <SvgIcon
        file="arrow-left"
      />
    </div>
    <CalendarDateTimePicker
      borderLeft={false}
      borderRight={true}
      highlight={
        Array [
          2009-04-03T18:00:00.000Z,
          2009-04-05T18:00:00.000Z,
        ]
      }
      icon={false}
      isCalendarShown={true}
      leftArrow={false}
      onChange={[Function]}
      onChangeCalendarVisibility={[Function]}
      onSetDate={[Function]}
      time={false}
      value={2009-05-31T18:00:00.000Z}
      visibleDate={2017-10-15T18:03:57.113Z}
    />
  </div>
</div>
`;

exports[`Calendar render() !isSingleCalendar 1`] = `
<div>
  <div>
    <CalendarDateTimePicker
      borderLeft={true}
      borderRight={false}
      highlight={
        Array [
          2009-04-03T18:00:00.000Z,
          2009-04-05T18:00:00.000Z,
        ]
      }
      icon={false}
      isCalendarShown={true}
      onChange={[Function]}
      onChangeCalendarVisibility={[Function]}
      onSetDate={[Function]}
      rightArrow={false}
      time={false}
      value={2009-04-30T18:00:00.000Z}
      visibleDate={2017-10-15T18:03:57.097Z}
    />
    <div>
      <SvgIcon
        file="arrow-left"
      />
    </div>
    <CalendarDateTimePicker
      borderLeft={false}
      borderRight={true}
      highlight={
        Array [
          2009-04-03T18:00:00.000Z,
          2009-04-05T18:00:00.000Z,
        ]
      }
      icon={false}
      isCalendarShown={true}
      leftArrow={false}
      onChange={[Function]}
      onChangeCalendarVisibility={[Function]}
      onSetDate={[Function]}
      time={false}
      value={2009-05-31T18:00:00.000Z}
      visibleDate={2017-10-15T18:03:57.097Z}
    />
  </div>
</div>
`;

exports[`Calendar render() basic 1`] = `
<div>
  <div>
    <CalendarDateTimePicker
      borderLeft={true}
      borderRight={true}
      highlight={2009-04-03T18:00:00.000Z}
      icon={true}
      isCalendarShown={true}
      onChange={[Function]}
      onChangeCalendarVisibility={[Function]}
      onSetDate={[Function]}
      time={false}
      value={2009-04-30T18:00:00.000Z}
      visibleDate={2009-04-03T18:00:00.000Z}
    />
  </div>
</div>
`;
